steps towards fixing graph visibility

--- a/FrontEnd/src/app/capacity-graph/capacity-graph.component.css
+++ b/FrontEnd/src/app/capacity-graph/capacity-graph.component.css
@@ -9,10 +9,84 @@
   margin-top: auto;
 }
 
+.test {
+}
 .auslastungsGrafik{
+  background-color: green;
   height: 96%;
   display: flex;
   padding: 0.3rem;
   align-items: baseline;
   overflow-x: auto;
+}
+
+.col-grafik {
+  flex: 0 0 auto;
+  width: 33.33333333%;
+}
+.col-content {
+  flex: 0 0 auto;
+  width: 66.66666667%;
+}
+
+
+
+/* Ab 1200px */
+@media (min-width: 1200px) {
+  .col-grafik {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+  }
+  .col-content {
+    flex: 0 0 auto;
+    width: 66.66666667%;
+  }
+}
+
+/* Ab 980px */
+@media (min-width: 980px) and (max-width: 1199px) {
+  .col-grafik {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+  }
+  .col-content {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+  }
+}
+
+/* Ab 768px */
+@media (min-width: 768px) and (max-width: 979px) {
+  .col-grafik {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+  }
+  .col-content {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+  }
+}
+
+/* Ab 480px */
+@media (min-width: 480px) and (max-width: 767px) {
+  .col-grafik {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+  }
+  .col-content {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+  }
+}
+
+/* Unter 480px */
+@media (max-width: 479px) {
+  .col-grafik {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+  }
+  .col-content {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+  }
 }
